--- a/src/components/registration/registration.scss
+++ b/src/components/registration/registration.scss
@@ -48,6 +48,7 @@
   }
   &__text{
     color: #000;
+    margin-left: 0.625rem;
   }
   &__account{
     display: flex;
